--- a/overseerr-api.yml
+++ b/overseerr-api.yml
@@ -1601,6 +1601,15 @@ components:
         discordId:
           type: string
           nullable: true
+        pushbulletAccessToken:
+          type: string
+          nullable: true
+        pushoverApplicationToken:
+          type: string
+          nullable: true
+        pushoverUserKey:
+          type: string
+          nullable: true
         telegramEnabled:
           type: boolean
         telegramBotUsername:
