--- a/overseerr-api.yml
+++ b/overseerr-api.yml
@@ -1121,6 +1121,8 @@ components:
               type: string
             webhookUrl:
               type: string
+            enableMentions:
+              type: boolean
     SlackSettings:
       type: object
       properties:
